Fixed comma in filename

--- a/inst/scripts/make-chimera-data.Rmd
+++ b/inst/scripts/make-chimera-data.Rmd
@@ -134,7 +134,7 @@ collected <- vector("list", length(sample.paths))
 for (i in seq_along(collected)) {
     curmat <- readMM(sample.paths[i])
     colnames(curmat) <- read.table(barcode.paths[i], stringsAsFactors=FALSE)[,1]
-    saveRDS(curmat, file=file.path(base.wt, sprintf("counts-raw-sample%i,rds", i)))
+    saveRDS(curmat, file=file.path(base.wt, sprintf("counts-raw-sample%i.rds", i)))
 }
 ```
 
@@ -258,7 +258,7 @@ collected <- vector("list", length(sample.paths))
 for (i in seq_along(collected)) {
     curmat <- readMM(sample.paths[i])
     colnames(curmat) <- read.table(barcode.paths[i], stringsAsFactors=FALSE)[,1]
-    saveRDS(curmat, file=file.path(base.tal1, sprintf("counts-raw-sample%i,rds", i)))
+    saveRDS(curmat, file=file.path(base.tal1, sprintf("counts-raw-sample%i.rds", i)))
 }
 ```
 
